@@ -1456,60 +1456,61 @@ enum {
   OP_ASSERTBACK,     /* 121 Positive lookbehind */
   OP_ASSERTBACK_NOT, /* 122 Negative lookbehind */
 
-  /* ONCE, BRA, BRAPOS, CBRA, CBRAPOS, and COND must come immediately after the
-  assertions, with ONCE first, as there's a test for >= ONCE for a subpattern
-  that isn't an assertion. The POS versions must immediately follow the non-POS
-  versions in each case. */
+  /* ONCE, ONCE_NC, BRA, BRAPOS, CBRA, CBRAPOS, and COND must come immediately
+  after the assertions, with ONCE first, as there's a test for >= ONCE for a
+  subpattern that isn't an assertion. The POS versions must immediately follow
+  the non-POS versions in each case. */
 
-  OP_ONCE,           /* 123 Atomic group */
-  OP_BRA,            /* 124 Start of non-capturing bracket */
-  OP_BRAPOS,         /* 125 Ditto, with unlimited, possessive repeat */
-  OP_CBRA,           /* 126 Start of capturing bracket */
-  OP_CBRAPOS,        /* 127 Ditto, with unlimited, possessive repeat */
-  OP_COND,           /* 128 Conditional group */
+  OP_ONCE,           /* 123 Atomic group, contains captures */
+  OP_ONCE_NC,        /* 124 Atomic group containing no captures */ 
+  OP_BRA,            /* 125 Start of non-capturing bracket */
+  OP_BRAPOS,         /* 126 Ditto, with unlimited, possessive repeat */
+  OP_CBRA,           /* 127 Start of capturing bracket */
+  OP_CBRAPOS,        /* 128 Ditto, with unlimited, possessive repeat */
+  OP_COND,           /* 129 Conditional group */
 
   /* These five must follow the previous five, in the same order. There's a
   check for >= SBRA to distinguish the two sets. */
 
-  OP_SBRA,           /* 129 Start of non-capturing bracket, check empty  */
-  OP_SBRAPOS,        /* 130 Ditto, with unlimited, possessive repeat */
-  OP_SCBRA,          /* 131 Start of capturing bracket, check empty */
-  OP_SCBRAPOS,       /* 132 Ditto, with unlimited, possessive repeat */
-  OP_SCOND,          /* 133 Conditional group, check empty */
+  OP_SBRA,           /* 130 Start of non-capturing bracket, check empty  */
+  OP_SBRAPOS,        /* 131 Ditto, with unlimited, possessive repeat */
+  OP_SCBRA,          /* 132 Start of capturing bracket, check empty */
+  OP_SCBRAPOS,       /* 133 Ditto, with unlimited, possessive repeat */
+  OP_SCOND,          /* 134 Conditional group, check empty */
 
   /* The next two pairs must (respectively) be kept together. */
 
-  OP_CREF,           /* 134 Used to hold a capture number as condition */
-  OP_NCREF,          /* 135 Same, but generated by a name reference*/
-  OP_RREF,           /* 136 Used to hold a recursion number as condition */
-  OP_NRREF,          /* 137 Same, but generated by a name reference*/
-  OP_DEF,            /* 138 The DEFINE condition */
+  OP_CREF,           /* 135 Used to hold a capture number as condition */
+  OP_NCREF,          /* 136 Same, but generated by a name reference*/
+  OP_RREF,           /* 137 Used to hold a recursion number as condition */
+  OP_NRREF,          /* 138 Same, but generated by a name reference*/
+  OP_DEF,            /* 139 The DEFINE condition */
 
-  OP_BRAZERO,        /* 139 These two must remain together and in this */
-  OP_BRAMINZERO,     /* 140 order. */
-  OP_BRAPOSZERO,     /* 141 */
+  OP_BRAZERO,        /* 140 These two must remain together and in this */
+  OP_BRAMINZERO,     /* 141 order. */
+  OP_BRAPOSZERO,     /* 142 */
 
   /* These are backtracking control verbs */
 
-  OP_MARK,           /* 142 always has an argument */
-  OP_PRUNE,          /* 143 */
-  OP_PRUNE_ARG,      /* 144 same, but with argument */
-  OP_SKIP,           /* 145 */
-  OP_SKIP_ARG,       /* 146 same, but with argument */
-  OP_THEN,           /* 147 */
-  OP_THEN_ARG,       /* 148 same, but with argument */
-  OP_COMMIT,         /* 149 */
+  OP_MARK,           /* 143 always has an argument */
+  OP_PRUNE,          /* 144 */
+  OP_PRUNE_ARG,      /* 145 same, but with argument */
+  OP_SKIP,           /* 146 */
+  OP_SKIP_ARG,       /* 147 same, but with argument */
+  OP_THEN,           /* 148 */
+  OP_THEN_ARG,       /* 149 same, but with argument */
+  OP_COMMIT,         /* 150 */
 
   /* These are forced failure and success verbs */
 
-  OP_FAIL,           /* 150 */
-  OP_ACCEPT,         /* 151 */
-  OP_ASSERT_ACCEPT,  /* 152 Used inside assertions */
-  OP_CLOSE,          /* 153 Used before OP_ACCEPT to close open captures */
+  OP_FAIL,           /* 151 */
+  OP_ACCEPT,         /* 152 */
+  OP_ASSERT_ACCEPT,  /* 153 Used inside assertions */
+  OP_CLOSE,          /* 154 Used before OP_ACCEPT to close open captures */
 
   /* This is used to skip a subpattern with a {0} quantifier */
 
-  OP_SKIPZERO,       /* 154 */
+  OP_SKIPZERO,       /* 155 */
 
   /* This is not an opcode, but is used to check that tables indexed by opcode
   are the correct length, in order to catch updating errors - there have been
@@ -1553,7 +1554,7 @@ some cases doesn't actually use these names at all). */
   "Recurse", "Callout",                                           \
   "Alt", "Ket", "KetRmax", "KetRmin", "KetRpos",                  \
   "Reverse", "Assert", "Assert not", "AssertB", "AssertB not",    \
-  "Once",                                                         \
+  "Once", "Once_NC",                                              \
   "Bra", "BraPos", "CBra", "CBraPos",                             \
   "Cond",                                                         \
   "SBra", "SBraPos", "SCBra", "SCBraPos",                         \
@@ -1627,6 +1628,7 @@ in UTF-8 mode. The code that uses this table must know about such things. */
   1+LINK_SIZE,                   /* Assert behind                          */ \
   1+LINK_SIZE,                   /* Assert behind not                      */ \
   1+LINK_SIZE,                   /* ONCE                                   */ \
+  1+LINK_SIZE,                   /* ONCE_NC                                */ \
   1+LINK_SIZE,                   /* BRA                                    */ \
   1+LINK_SIZE,                   /* BRAPOS                                 */ \
   3+LINK_SIZE,                   /* CBRA                                   */ \
